<resources>
    <string name="app_name">Loppy</string>

    <string name="register_now">Register Now</string>
    <string name="login_now">Login Now</string>
    <string name="welcome_to_loppy">Welcome To Loppy</string>
    <string name="enjoy_the_wonderful_world">Enjoy the wonderful world</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="receiver_address">Receiver Address</string>
    <string name="mobile">Mobile</string>
    <string name="number">Number</string>
    <string name="mob_no">Mob.no.</string>
    <string name="password">Password</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in"><font color="#cccccc">Already have an Account? /</font><font color="#000000"> Sign In</font></string>
    <string name="successfully">Successfully</string>
    <string name="registered_n_successfully">Registered\nSuccessfully</string>
    <string name="order_n_successfully">Order\nSuccessfully</string>
    <string name="okay">Okay</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_job">Job</string>
    <string name="title_profile">Profile</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="retrieve_your_password">Retrieve Your Password</string>
    <string name="submit">Submit</string>
    <string name="verify_otp_code">Verify OTP Code</string>
    <string name="enter_4_digit_otp_code_below">Enter 4 digit OTP code below</string>
    <string name="reset_your_password">Reset Your Password?</string>
    <string name="please_reset_your_new_password">Please Reset Your New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="vehicles">Vehicles</string>
    <string name="vehicles_details">Vehicles Details</string>
    <string name="receiver">Receiver</string>
    <string name="sender">Sender</string>
    <string name="sender_info">Sender Information</string>
    <string name="load_type">Load Type</string>
    <string name="good_type">Good Type</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>
    <string name="photo_load">Photo Load</string>
    <string name="goes_to_payment">Goes to Payment</string>
    <string name="add_receiver_information">Add receiver information</string>
    <string name="paid_by">Paid By:</string>
    <string name="join_now">Join Now</string>
    <string name="offers">Offers</string>
    <string name="select_load_type">Select Load Type</string>
    <string name="select_good_type">Select Good Type</string>
    <string name="add_load_information">Add Load Information</string>
    <string name="quantity">Quantity</string>
    <string name="no_of_handlers">No of handlers</string>
    <string name="estimated_amount">Estimated Amount</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="ride_history">Ride History</string>
    <string name="no_record_found">No Record Found.</string>
    <string name="full_loader">Full Loader</string>
    <string name="half_loader">Half Loader</string>
    <string name="height">Height</string>
    <string name="length">Length</string>
    <string name="company_name">Company Name</string>
    <string name="part_loader">Part Loader</string>
    <string name="confirm">Confirm</string>
</resources>
